--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -2,16 +2,22 @@
 <!-- http://localhost:3000/isolated/exercise/02.html -->
 
 <body>
-  <div id="root"></div>
+  <!-- <div id="root"></div> -->
 
   <!-- 🐨 add React and ReactDOM on the page.
        💰 Here are script tags that'll do the job:
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   -->
+  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
+
+
 
   <script type="module">
-    const rootElement = document.getElementById('root')
+    // const rootElement = document.getElementById('root')
+
+    const rootElement = document.createElement('div', {id: 'root'});
 
     // You're going to re-implement this code using React!
     // 💣 So go ahead and delete this implementation (or comment it out for now)
@@ -19,8 +25,12 @@
     const element = document.createElement('div')
     element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
     element.className = 'container' // 💰 in React, this is also called the "className" prop
+    const reactElement = React.createElement('h1', {id: 'element-id', children: 'Hello World sushiiii', blah: 'suhsiiiii'})
+    console.log('reactelement----', reactElement)
     // This is similar to ReactDOM.render
-    rootElement.append(element)
+    // rootElement.append(element)
+    ReactDOM.render(reactElement, rootElement)
+
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
