--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -8,13 +8,23 @@
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
+    const Message = ({children}) => {
+      return <div className="message">{children}</div>
+    }
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
     const element = (
       <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
+        {Message({children: 'Hello World SUshi'})}
+        {Message({children: 'GoodBye Wolrd sushi'})}
+        <Message>Wow react Component</Message>
+        {React.createElement(Message, {children: 'oooh my god'})}
+
+        <Message>
+          Cheer up
+          <Message>good friend</Message>
+        </Message>
       </div>
     )
 
