--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -9,22 +9,34 @@
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
 
   <script type="text/babel">
-    // 🐨 on the script tag above, change `type="module"`
-    // to `type="text/babel"` so babel will compile this code for the browser to run.
-
     // 🐨 re-implement this using JSX!
     // const element = React.createElement('div', {
     //   className: 'container',
     //   children: 'Hello World',
     // })
 
-    const element = <div className="container">Hello World Sushmeet</div>
+    const header = <h1>hello JSX Another</h1>
+    const buttonElm = <button>Click Me Sushi</button>
+    const paraELM = <p>this is the cool para</p>
+    const props = {
+      className: 'helloClass22',
+      id: 'elmId22',
+      children: [header, buttonElm, paraELM],
+    }
 
-    // 💰 there are a few subtle differences between JSX and HTML. One such
-    // difference is how you apply a class to an element in JSX is by using
-    // `className` rather than `class`!
-    // 📜 You can learn the differences between JSX and HTML syntax from the React docs here:
-    // https://reactjs.org/docs/dom-elements.html#differences-in-attributes
+    // const element = (
+    //   <div className="helloClass" id="elmId">
+    //     <h1>hello JSX yamaa</h1>
+    //     <button>Click Me!!!!</button>
+    //     <p>this is the paragraph!!!!!!!!</p>
+    //   </div>
+    // )
+
+    // U can send the props like this
+    // or individuallly like we send above
+    const element = <div {...props} />
+
+    console.log('chaprter3 element---', element)
 
     ReactDOM.render(element, document.getElementById('root'))
   </script>
