--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -5,26 +5,62 @@
   <div id="root"></div>
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
-    // 🐨 Make a function called `message` which returns the JSX we want to share
     const Message = ({children}) => {
       return <div className="message">{children}</div>
     }
 
+    const AnotherMessage = ({subject, greeting}) => {
+      return (
+        <div>
+          {greeting} {subject}
+        </div>
+      )
+    }
+
+    // const PropTypes = {
+    //   number(props, propName, componentName) {
+    //     if (typeof props[propName] !== 'number') {
+    //       return new Error('Some useful error message here')
+    //     }
+    //   },
+    // }
+
+    // AnotherMessage.propTypes = {
+    //   subject: PropTypes.number,
+    // }
+
+    // const PropTypes = {
+    //   number(props, propName, componentName) {
+    //     if (typeof props[propName] !== 'number') {
+    //       return new Error('Some useful error message here')
+    //     }
+    //   },
+    // }
+
+    AnotherMessage.propTypes = {
+      subject: PropTypes.number,
+      greeting: PropTypes.string.isRequired,
+    }
+
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+    // it needs to be upper case function for react api to know.
     const element = (
       <div className="container">
-        {Message({children: 'Hello World SUshi'})}
-        {Message({children: 'GoodBye Wolrd sushi'})}
+        {Message({children: 'Hello Sushi'})}
         <Message>Wow react Component</Message>
-        {React.createElement(Message, {children: 'oooh my god'})}
+        {React.createElement(Message, {children: 'React Raw API'})}
 
         <Message>
           Cheer up
           <Message>good friend</Message>
         </Message>
+        <Message children="Usual react style" />
+
+        <AnotherMessage subject={123} greeting="Hello" />
       </div>
     )
 
